--- a/resources/lang/kk.json
+++ b/resources/lang/kk.json
@@ -54,6 +54,7 @@
     "Go Back": "Kaytıw",
     "Reset Password": "Äri Karay",
     "Log In": "Kiriw",
+    "Your Bookmarks:": "Saktalgan Bölmeler:",
 
     "We are happy to see you a part of our community, :name": "Bizdiń site`ka koc keldińiz, :name",
     "We hope FindARoomie will help you to solve your problems at the time and find new friends! Post your own room or find one right now!": "FindARoomie sizdiń mäseleńizdi cecetine jäne jańa dostar tabıwıńızga senimdimiz. Öz bölmeńizdi jükteńiz ne kazir tabıńız!",
